Adiciona menu de navegação com links para as seções

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Início</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#inicio">Início</a></li>
+                <li><a href="#quem-somos">Quem somos</a></li>
+                <li><a href="#estatisticas">Estatísticas</a></li>
+                <li><a href="#adotar">Adotar</a></li>
+                <li><a href="#como-ajudar">Como ajudar</a></li>
+            </ul>
+        </nav>
+  </header>
 </body>
 </html>
