--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -18,23 +18,11 @@
       <a href="/pages/login.html" class="butaoLogin">Login</a>
     </div>
   </nav>
-  <section class="capa">
-    <a href="#" class="txtCatinder"><h1><i class="fa-solid fa-shield-cat"></i> Catinder</h1></a>
-    <hr> <br>
-    <p class="txtCatinder">Encontre seu meowtch perfeito</p>
-  </section>
-
-  <section class="conteudo">
-   <section class="como-funciona">
-  <div class="passos">
-      <p class="linhaHori"><i class="fa-solid fa-search"></i> Explore gatinhos disponíveis</p>
-      <p class="linhaHori"><i class="fa-solid fa-heart-circle-check"></i> Escolha seu parceiro felino ideal</p>
-      <p class="linhaHori"><i class="fa-solid fa-handshake"></i> Complete a adoção com responsabilidade e amor</p>
+ <main>
+  <div>
+    
   </div>
-</section>
-
-  </section>
-
+ </main>
   <footer>
   <div class="footer-links">
     <a href="/pages/quemSomos.html"><i class="fa-solid fa-users"></i> Quem Somos</a>
