adiciona páginas e estilização do site

--- a/pages/login.html
+++ b/pages/login.html
@@ -35,7 +35,7 @@
             <input type="password" id="password" name="password" placeholder=" ">
             <label for="password">Senha</label>
           </div>
-          <a href="/pages/catalogo.html" class="butaoLogin">Entrar</a>
+          <a href="/pages/user.html" class="butaoLogin">Entrar</a>
 
         </form>
 
