adiciona páginas e estilização do site

--- a/pages/guiaCuidados.html
+++ b/pages/guiaCuidados.html
@@ -28,11 +28,30 @@
     </label>
   </div>
 </nav>
+     <main class="cuidados-container">
+      <div>
+  <h1 class="titulo-cuidados">Guia de Cuidados com Gatinhos</h1>
+  <section class="cartas-cuidados">
+    <a href="alimentacao.html" class="carta-cuidados">
+      <h2>Alimentação</h2>
+      <p>Saiba como alimentar corretamente seu gatinho em cada fase da vida.</p>
+    </a>
 
- <main>
-  <div>
-      <div class="gatos-container" id="gatos-adotados"></div>
+    <a href="vacinas.html" class="carta-cuidados">
+      <h2>Vacinas Essenciais</h2>
+      <p>Entenda a importância das vacinas e quais são obrigatórias.</p>
+    </a>
 
+    <a href="castracao.html" class="carta-cuidados">
+      <h2>Importância da Castração</h2>
+      <p>Veja como a castração ajuda na saúde e bem-estar dos gatos.</p>
+    </a>
+
+    <a href="adocao.html" class="carta-cuidados">
+      <h2>Adoção Responsável</h2>
+      <p>Adotar é um ato de amor, mas requer responsabilidade. Saiba mais.</p>
+    </a>
+  </section>
   </div>
  </main>
   <footer>
