--- a/pages/adocoes.html
+++ b/pages/adocoes.html
@@ -8,16 +8,26 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <nav>
-    <div class="logo">
-      <a href="/index.html">Catinder</a> <i class="fa-solid fa-shield-cat"></i>
-    </div>
-    <div class="menu">
-      <a href="/index.html">Principal</a>
-      <a href="/pages/adocoes.html">Adoções</a>
-      <a href="/pages/login.html" class="butaoLogin">Login</a>
-    </div>
-  </nav>
+  <nav class="navbar">
+  <div class="logo">
+    <a href="/index.html">Catinder</a> <i class="fa-solid fa-shield-cat"></i>
+  </div>
+
+  <div class="menu">
+    <a href="/index.html">Principal</a>
+    <a href="/pages/adocoes.html">Adoções</a>
+    <a href="/pages/login.html" class="butaoLogin">Login</a>
+
+    <label class="switch-mode">
+      <input type="checkbox" id="mode-toggle" />
+      <span class="slider-icons">
+        <i class="fas fa-sun"></i>            
+        <div>_</div>
+        <i class="fas fa-moon"></i>
+      </span>
+    </label>
+  </div>
+</nav>
  <main>
   <div>
     <div id="gatos-container"></div>
@@ -38,6 +48,8 @@
 
   <p class="footer-copy">&copy; 2025 Catinder - Todos os direitos reservados.</p>
 </footer>
-  <script type="module" src="../controller/controller.js"></script>
+  <script type="module" src="/controller/controller.js"></script>
+  <script type="module" src="/controller/modo-escuro.js"></script>
+
 </body>
 </html>
