--- a/pages/esqueciSenha.html
+++ b/pages/esqueciSenha.html
@@ -2,42 +2,26 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Catinder</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Recuperar Senha - Catinder</title>
   <link rel="stylesheet" href="/style/style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
-  <nav>
-    <div class="logo">
-      <a href="/index.html">Catinder</a> <i class="fa-solid fa-shield-cat"></i>
-    </div>
-    <div class="menu">
-      <a href="/index.html">Principal</a>
-      <a href="/pages/adocoes.html">Adoções</a>
-      <a href="/pages/login.html" class="butaoLogin">Login</a>
-    </div>
-  </nav>
- <main>
-  <div>
-    
-  </div>
- </main>
-  <footer>
-  <div class="footer-links">
-    <a href="/pages/quemSomos.html"><i class="fa-solid fa-users"></i> Quem Somos</a>
-    <a href="/pages/diretrizesPolitica.html"><i class="fa-solid fa-scale-balanced"></i> Diretrizes & Políticas</a>
-    <a href="/pages/contato.html"><i class="fa-solid fa-envelope"></i> Contato</a>
-  </div>
+  <main class="registro-container">
+    <h2>Recuperar Senha</h2>
+    <form class="registro-form">
+      <div class="input-box">
+        <label for="email">Digite seu e-mail</label>
+        <input type="email" id="email" name="email" required />
+      </div>
+      <a href="/pages/confirmacao.html" class="btn-registrar">Enviar link de recuperação</a>
 
-  <div class="footer-social">
-    <a href="#top"><i class="fa-brands fa-instagram"></i></a>
-    <a href="#top"><i class="fa-brands fa-x-twitter"></i></a>
-    <a href="#top"><i class="fa-brands fa-tiktok"></i></a>
-  </div>
+      <p>Lembrou a senha? <a href="/pages/login.html">Voltar ao login</a></p>
+    </form>
+  </main>
 
-  <p class="footer-copy">&copy; 2025 Catinder - Todos os direitos reservados.</p>
-</footer>
-
+  <script type="module" src="/controller/controller.js"></script>
+  <script type="module" src="/controller/modo-escuro.js"></script>
 </body>
 </html>
