--- a/pages/login.html
+++ b/pages/login.html
@@ -9,16 +9,26 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-  <nav>
-    <div class="logo">
-      <a href="/index.html">Catinder</a> <i class="fa-solid fa-shield-cat"></i>
-    </div>
-    <div class="menu">
-      <a href="/index.html">Principal</a>
-      <a href="/pages/adocoes.html">Adoções</a>
-      <a href="/pages/login.html" class="butaoLogin">Login</a>
-    </div>
-  </nav>
+  <nav class="navbar">
+  <div class="logo">
+    <a href="/index.html">Catinder</a> <i class="fa-solid fa-shield-cat"></i>
+  </div>
+
+  <div class="menu">
+    <a href="/index.html">Principal</a>
+    <a href="/pages/adocoes.html">Adoções</a>
+    <a href="/pages/login.html" class="butaoLogin">Login</a>
+
+    <label class="switch-mode">
+      <input type="checkbox" id="mode-toggle" />
+      <span class="slider-icons">
+        <i class="fas fa-sun"></i>            
+        <div>_</div>
+        <i class="fas fa-moon"></i>
+      </span>
+    </label>
+  </div>
+</nav>
 
   <main>
     <div class="login-container">
@@ -27,12 +37,12 @@
 
         <form action="/login" method="post">
           <div class="input-box">
-            <input type="text" id="username" name="username" placeholder=" ">
+            <input type="text" id="username" name="username" placeholder=" " class="input-username">
             <label for="username">Usuário</label>
           </div>
 
           <div class="input-box">
-            <input type="password" id="password" name="password" placeholder=" ">
+            <input type="password" id="password" name="password" placeholder=" " class="input-password">
             <label for="password">Senha</label>
           </div>
           <a href="/pages/user.html" class="butaoLogin">Entrar</a>
@@ -44,7 +54,7 @@
       </div>
     </div>
   </main>
-
-  
+ <script type="module" src="/controller/controller.js"></script>
+ <script type="module" src="/controller/modo-escuro.js"></script>
 </body>
 </html>
