--- a/pages/registro.html
+++ b/pages/registro.html
@@ -2,13 +2,13 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Catinder</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Registro - Catinder</title>
   <link rel="stylesheet" href="/style/style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
-  <nav>
+  <nav class="navbar">
     <div class="logo">
       <a href="/index.html">Catinder</a> <i class="fa-solid fa-shield-cat"></i>
     </div>
@@ -16,28 +16,47 @@
       <a href="/index.html">Principal</a>
       <a href="/pages/adocoes.html">Adoções</a>
       <a href="/pages/login.html" class="butaoLogin">Login</a>
+
+      <label class="switch-mode">
+        <input type="checkbox" id="mode-toggle"/>
+        <span class="slider-icons">
+          <i class="fas fa-sun"></i>
+          <div>_</div>
+          <i class="fas fa-moon"></i>
+        </span>
+      </label>
     </div>
   </nav>
- <main>
-  <div>
-    
-  </div>
- </main>
-  <footer>
-  <div class="footer-links">
-    <a href="/pages/quemSomos.html"><i class="fa-solid fa-users"></i> Quem Somos</a>
-    <a href="/pages/diretrizesPolitica.html"><i class="fa-solid fa-scale-balanced"></i> Diretrizes & Políticas</a>
-    <a href="/pages/contato.html"><i class="fa-solid fa-envelope"></i> Contato</a>
-  </div>
 
-  <div class="footer-social">
-    <a href="#top"><i class="fa-brands fa-instagram"></i></a>
-    <a href="#top"><i class="fa-brands fa-x-twitter"></i></a>
-    <a href="#top"><i class="fa-brands fa-tiktok"></i></a>
-  </div>
+  <main class="registro-container">
+    <h2>Criar Conta</h2>
+    <form class="registro-form">
+      <div class="input-box2">
+        <label for="nome">Nome completo</label>
+        <input type="text" id="nome" name="nome"/>
+      </div>
 
-  <p class="footer-copy">&copy; 2025 Catinder - Todos os direitos reservados.</p>
-</footer>
+      <div class="input-box2">
+        <label for="email">E-mail</label>
+        <input type="email" id="email" name="email"/>
+      </div>
 
+      <div class="input-box2">
+        <label for="senha">Senha</label>
+        <input type="password" id="senha" name="senha"/>
+      </div>
+
+      <div class="input-box2">
+        <label for="confirmar">Confirmar senha</label>
+        <input type="password" id="confirmar" name="confirmar"/>
+      </div>
+
+      <a class="btn-registrar" href="/pages/confirmacao.html">Registrar</a>
+      <p>Já tem uma conta? <a href="/pages/login.html">Entrar</a></p>
+    </form>
+  </main>
+  <script type="module" src="/controller/controller.js"></script>
+ <script type="module" src="/controller/modo-escuro.js"></script>
+<script type="module" src="/controller/perfil-controller.js"></script>
 </body>
 </html>
